The issue of last main list item bleeding into next section was solved by:
Setting the height of aboutme section to 100%
keeping height of inside lists to 100vh.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -172,7 +172,7 @@ header {
 
 .section-aboutme {
   /*    padding: 0px 180px;*/
-  height: 100vh;
+  height: 100%;
 }
 /* .section-aboutme p {
   text-align: justify;
